# LeanSticky

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  messages.yml
core/: Cargo.toml
core/src/: lib.rs  messages.rs  model.rs  storage.rs
core/tests/: bootstrap_flow.rs
desktop/: Cargo.toml
desktop/src/: activation.rs  app.rs  autosave.rs  fonts.rs  main.rs
desktop/src/app/: management_view.rs  note_view.rs  viewports.rs
docs/en/: design.md
docs/ja/: design.md
docs/schema/v001/: config.example.yml  config.schema.json  messages.example.yml  messages.schema.json  note.example.yml  note.schema.json  schema.json  session.example.yml  session.schema.json
tui/: Cargo.toml
tui/src/: main.rs
