[package]
name = "leansticky-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
time.workspace = true
ulid.workspace = true
